--- a/src/main/resources/static/html/findPwd.html
+++ b/src/main/resources/static/html/findPwd.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>계정 조회</title>
+  <title>비밀번호 찾기</title>
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/find.css">
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
+
   <div id="search-user">
-    <h2>계정 조회</h2>
-    <input type="text" id="userId" placeholder="사용자 ID 조회">
-    <button id="findUserBtn">조회</button>
+    <h2>비밀번호 찾기</h2>
+    <input type="text" id="userId" placeholder="사용자 ID">
+    <button id="findUserPwdBtn" onclick="findUserPwd()">조회</button>
     <div id="userInfo"></div>
   </div>
+<script src="../javascript/find.js"></script>
 </body>
 </html>
